# dnf5-example-plugin

./: CMakeLists.txt  README.md  dnf5-example-plugin.spec
dnf5_foo_plugin/: CMakeLists.txt  foo.cpp  foo.hpp  foo_cmd_plugin.cpp
libdnf5_baz_plugin/: CMakeLists.txt  baz.conf  baz.cpp
